--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: cassassi <cassassi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/18 15:59:27 by cassassi          #+#    #+#              #
-#    Updated: 2021/10/11 10:41:00 by cassassi         ###   ########.fr        #
+#    Updated: 2022/01/19 17:45:28 by cassassi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,8 @@ SRCS	= ft_atoi.c ft_strncmp.c ft_strlen.c ft_memmove.c ft_memchr.c \
 	  ft_strlcat.c ft_strnstr.c ft_calloc.c ft_strdup.c ft_substr.c \
 	  ft_strjoin.c ft_strtrim.c ft_putchar_fd.c ft_putstr_fd.c ft_itoa.c\
 	  ft_putendl_fd.c ft_putnbr_fd.c ft_split.c ft_strjoin_char.c\
-	  get_next_line.c get_next_line_utils.c ft_atoll.c
+	  get_next_line.c get_next_line_utils.c ft_atoll.c ft_lstnew.c\
+	  ft_lstadd_back.c ft_lstlast.c
 
 OBJSD   = .obj/
 
@@ -27,9 +28,9 @@ OBJS    = $(addprefix $(OBJSD), $(SRCS:%.c=%.o))
 
 CC	= gcc
 
-RM	= rm -f
+RM	= rm -rf
 
-INC	= -I libft.h
+INC	= libft.h
 
 FLAGS	= -Wall -Wextra -Werror
 
@@ -39,7 +40,7 @@ $(NAME):	$(OBJS)
 all :		$(NAME)
 
 clean:
-			$(RM) $(OBJDS)
+			$(RM) $(OBJSD)
 
 fclean:		clean
 			$(RM) $(NAME)
