debut de parsing

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: cassassi <cassassi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/18 15:59:27 by cassassi          #+#    #+#              #
-#    Updated: 2022/01/19 17:45:28 by cassassi         ###   ########.fr        #
+#    Updated: 2021/10/11 10:41:00 by cassassi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,11 +20,9 @@ SRCS	= ft_atoi.c ft_strncmp.c ft_strlen.c ft_memmove.c ft_memchr.c \
 	  ft_strjoin.c ft_strtrim.c ft_putchar_fd.c ft_putstr_fd.c ft_itoa.c\
 	  ft_putendl_fd.c ft_putnbr_fd.c ft_split.c ft_strjoin_char.c\
 	  get_next_line.c get_next_line_utils.c ft_atoll.c ft_lstnew.c\
-	  ft_lstadd_back.c ft_lstlast.c
+	  ft_lstadd_back.c ft_lstlast.c ft_lstdelone.c ft_lstclear.c
 
-OBJSD   = .obj/
-
-OBJS    = $(addprefix $(OBJSD), $(SRCS:%.c=%.o))		
+OBJS    = $(SRCS:%.c=%.o)
 
 CC	= gcc
 
@@ -35,18 +33,15 @@ INC	= libft.h
 FLAGS	= -Wall -Wextra -Werror
 
 $(NAME):	$(OBJS)
+			$(CC) -c $(FLAGS) $(INC) $(SRCS)
 			ar -rc $(NAME) $(OBJS)
 
 all :		$(NAME)
 
 clean:
-			$(RM) $(OBJSD)
+			$(RM) $(OBJS)
 
 fclean:		clean
 			$(RM) $(NAME)
 
 re:			fclean all
-
-$(OBJSD)%.o:%.c
-			@mkdir -p $(OBJSD)
-			$(CC) $(INC) $(FLAGS )-o $@ -c $<
